[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/game_graph/editor/dialogs/GameGraphWindowDialogNewDialog.gd" type="Script" id=1]

[node name="WindowDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -93.5
margin_right = 143.5
margin_bottom = 93.5
window_title = "New Dialog"
resizable = true
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Container" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 277.0
margin_bottom = 177.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="Margin/Container"]
margin_right = 267.0
margin_bottom = 14.0
text = "Give your new dialog a label and a key."
autowrap = true

[node name="Dialog" type="HBoxContainer" parent="Margin/Container"]
margin_top = 19.0
margin_right = 267.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="Margin/Container/Dialog"]
margin_top = 5.0
margin_right = 87.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Label"

[node name="Input" type="LineEdit" parent="Margin/Container/Dialog"]
margin_left = 91.0
margin_right = 267.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "the dialog's quick description"

[node name="Key" type="HBoxContainer" parent="Margin/Container"]
margin_top = 48.0
margin_right = 267.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="Margin/Container/Key"]
margin_top = 5.0
margin_right = 87.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Key"

[node name="Input" type="LineEdit" parent="Margin/Container/Key"]
margin_left = 91.0
margin_right = 267.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "the dialog uniq key"

[node name="Warning" type="Label" parent="Margin/Container"]
visible = false
margin_top = 77.0
margin_right = 267.0
margin_bottom = 91.0
text = "this key is already used"
align = 2

[node name="Buttons" type="HBoxContainer" parent="Margin/Container"]
margin_top = 77.0
margin_right = 267.0
margin_bottom = 167.0
size_flags_vertical = 3

[node name="Cancel" type="Button" parent="Margin/Container/Buttons"]
margin_top = 70.0
margin_right = 54.0
margin_bottom = 90.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 8
text = "Cancel"
flat = true
align = 2

[node name="Confirm" type="Button" parent="Margin/Container/Buttons"]
margin_left = 214.0
margin_top = 70.0
margin_right = 267.0
margin_bottom = 90.0
grow_horizontal = 0
size_flags_horizontal = 14
size_flags_vertical = 8
disabled = true
text = "Create"
[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_popup_hide"]
[connection signal="text_changed" from="Margin/Container/Dialog/Input" to="." method="_on_DialogInput_text_changed"]
[connection signal="text_changed" from="Margin/Container/Key/Input" to="." method="_on_KeyInput_text_changed"]
[connection signal="pressed" from="Margin/Container/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Margin/Container/Buttons/Confirm" to="." method="_on_Confirm_pressed"]
